fullSandbox11072023/force-app/main/default/objects/Product_Mapping__mdt/fields/Product_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Area_Code__c</fullName>
    <label>Product Area Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>