fullSandbox11072023/force-app/main/default/objects/Product_Mapping__mdt/fields/Product_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Name__c</fullName>
    <label>Product Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>